--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,14 @@ image: /assets/img/logo/trilp-sm-share.jpg
 paginate: 5 # posts per page
 paginate_path: "/page:num/"
 
-# Build settings
-theme: trilp
-#remote_theme: jekyll/minima
-
 plugins:
   - jekyll-paginate
   - jekyll-seo-tag
 
-# Theme-specific settings
-
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
 
-# Trilp theme specific settings
+# Trilp specific settings
 trilp:
   # Trilp date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
